# AutoSA

./: .gitignore  .gitmodules  .nfs0000000000a8440c00013115  .nfs0000000000a84bc40001310e  ChangeLog  Dockerfile  L_drain_IO_L1_out.c  Makefile.am  README  README.md  U_tmp_1_tmp_code.c  U_tmp_out2.c  autogen.sh  clast_printer.c  clast_printer.h  clean.sh  configure.ac  consecutivity.c  consecutivity.h  cpu.c  cpu.h  cuda.c  cuda.h  cuda_common.c  cuda_common.h  get_submodules.sh  gpu.c  gpu.h  gpu_array_tile.h  gpu_group.c  gpu_group.h  gpu_hybrid.c  gpu_print.c  gpu_print.h  gpu_tree.c  gpu_tree.h  gpucode.c  gpucode.h  grouping.c  hybrid.c  (+27 more)
.deps/: cpu.Po  cuda.Po  cuda_common.Po  gpu.Po  gpu_array_tile.Po  gpu_group.Po  gpu_hybrid.Po  gpu_print.Po  gpu_tree.Po  grouping.Po  hybrid.Po  opencl.Po  ppcg.Po  ppcg_options.Po  print.Po  schedule.Po  util.Po  version.Po
.libs/: lt-autosa  lt-ppcg  ppcg
autosa_config/: autosa_config.json  hw_info.json  module_group.json  optimizer_settings.json
autosa_config/hw_info_libs/: hw_info.json.ku3  hw_info.json.u200  hw_info.json.u250
autosa_config/optimizer_settings_libs/: gemm3_fp32.json  gemm3_int16.json  gemm3_int16_32.json  gemm3_int8.json  gemm3_int8_64.json  gemm4_fp32.json  mm_small.json  mttkrp_fp32.json  ttm_fp32.json  ttmc_fp32.json
autosa_scripts/: autosa  autosa.py  codegen.py  latency_model.py  module_group.py  optimizer.py  optimizer_prune.py  pe_group.py  resource_model.py
autosa_scripts/hls_scripts/: hls_script.tcl  hls_script_synth.tcl
autosa_scripts/intel_opencl_scripts/: Makefile  compile_design.sh
autosa_scripts/odyssey/: RL_utils.py  analyze.py  clean_up.sh  design.py  explorer.py  main.py  requirements.txt  search_task.py  solver.py  tuners.py  unit_test.py  utils.py
autosa_scripts/tapa_scripts/: CMakeLists.txt
autosa_scripts/tuner/: constraint.py  design.py  main.py  search_task.py  tuner.py  unit_test.py  utils.py
autosa_scripts/tuning_scripts/: cnn.sh  gemm.sh  model_validate.sh
autosa_scripts/vitis_scripts/: Makefile  connectivity.cfg
autosa_tests/cnn/: README.md  kernel.c  kernel.h  param_names.json  simd_info.json
autosa_tests/dnn_ops/: dc_simd_info.json  fc_simd_info.json  kernel.c  kernel.h
autosa_tests/lu/: README.md  add_batch.py  kernel.c  kernel.h  kernel.ppcg.c  kernel_uniform.c  out  out2  simd_info.json
autosa_tests/mm/: README.md  kernel.c  kernel.h  param_names.json  simd_info.json
autosa_tests/mm_block_sparse/: README.md  connectivity.cfg  kernel.c  kernel.h
autosa_tests/mm_catapult/: README.md  directives.tcl  kernel.c  kernel.h  kernel_kernel_hw.h
autosa_tests/mm_getting_started/: kernel.c
autosa_tests/mm_hbm/: Makefile  README.md  connectivity.cfg  kernel.h
autosa_tests/mm_hbm_large/: README.md  connectivity.cfg  kernel.h  simd_info.json
autosa_tests/mm_hcl/: README.md  kernel.c  kernel.h
autosa_tests/mm_hcl_intel/: README.md  kernel2.c  simd_info.json
autosa_tests/mm_int16/: Makefile  README.md  kernel.h
autosa_tests/mm_intel/: README.md  kernel.c
autosa_tests/mm_intel_test/: kernel.h
autosa_tests/mm_large/: README.md  kernel.c  kernel.c.layout1  kernel.h  simd_info.json
autosa_tests/mm_large_int16/: kernel.h
clan/: ChangeLog
docs/: conf.py  docker_image.rst  index.rst  install_from_source.rst  installation.rst
examples/: chemv.c
m4/: ax_check_openmp.m4
ppcg_src/: ChangeLog  Makefile.am  autogen.sh  cpu.c  gpu_tree.c  grouping.c  grouping.h  hybrid.c  polybench_test.sh.in  ppcg.c  print.c  schedule.h
ppcg_src/pet/: .gitignore  ChangeLog  Makefile.am  README  aff.c  aff.h  all.c  all.c.in  array.c  array.h  autogen.sh  clang.cc  clang.h  clang_compatibility.h  codegen_test.sh  codegen_test.sh.in  config.h  configure.ac  context.c  context.h  emit.c  expr.c  expr.h  expr_access_type.h  expr_arg.c  expr_arg.h  expr_plus.cc  expr_plus.h  filter.c  filter.h  id.cc  id.h  inlined_calls.cc  inlined_calls.h  inliner.cc  inliner.h  isl_id_to_pet_expr.c  isl_id_to_pet_expr.h  killed_locals.cc  killed_locals.h  (+46 more)
ppcg_src/pet/include/: pet.h
ppcg_src/pet/interface/: isl.py.top  pet.py
ppcg_src/pet/m4/: ax_detect_clang.m4
ppcg_src/pet/tests/: QR.c  QR.scop  arg.c  arg.scop  array.c  array.scop  assume.c  assume.scop  assume2.c  assume2.scop  assume3.c  assume3.scop  assume4.c  assume4.scop  assume5.c  assume5.scop  boolean.c  boolean.scop  break.c  break.scop  break2.c  break2.scop  break3.c  break3.scop  break4.c  break4.scop  break5.c  break5.scop  break6.c  break6.scop  break7.c  break7.scop  call1.c  call1.scop  call2.c  call2.scop  call3.c  call3.scop  call4.c  call4.scop  (+334 more)
ppcg_src/pet/tests/autodetect/: decl.c  decl.scop  decl2.c  decl2.scop  decl3.c  decl3.scop  decl4.c  decl4.scop  decl5.c  decl5.scop  empty2.c  empty2.scop  if1.c  if1.scop  if2.c  if2.scop  if3.c  if3.scop  loop1.c  loop2.c  loop2.scop  loop3.c  loop3.scop  loop4.c  loop4.scop  loop5.c  loop5.scop  scalar.c  scalar.scop  while.c  while.scop
ppcg_src/pet/tests/encapsulate/: continue6.c  continue6.scop  dynamic_condition.scop  for_while.scop  independent5.c  independent5.scop  inf_break.c  inf_break.scop  loop7.scop  no_propagate.c  no_propagate.scop  while.scop  while2.c  while2.scop  while_affine.c  while_affine.scop
src/: .nfs0000000000a8481600013118  .nfs0000000000a84bea00013116  Makefile.am  autogen.sh  autosa_catapult_hls_c.cpp  autosa_catapult_hls_c.h  autosa_codegen.cpp  autosa_codegen.h  autosa_comm.cpp  autosa_comm.h  autosa_common.cpp  autosa_common.h  autosa_cpu.h  autosa_intel_opencl.cpp  autosa_intel_opencl.h  autosa_print.cpp  autosa_print.h  autosa_schedule_tree.cpp  autosa_schedule_tree.h  autosa_tapa_cpp.cpp  autosa_tapa_cpp.h  autosa_trans.cpp  autosa_trans.h  autosa_tuning.cpp  autosa_tuning.h  autosa_utils.cpp  autosa_utils.h  autosa_xilinx_hls_c.cpp  autosa_xilinx_hls_c.h  confdefs.h  configure.ac  cpu.h  cuda.h  cuda_common.h  get_submodules.sh  gpu.h  gpu_group.c  gpu_hybrid.h  grouping.h  hybrid.h  (+12 more)
src/ppcg_files/: cuda.c  cuda.h  gpu.c  gpu_array_tile.h  gpu_group.h  gpu_print.h  gpu_tree.h  opencl.c  opencl.h
tests/: call5.c
(+426 files in other folders)
